- Fix breadcrumbs (now using standard Lizard functions) - Fix links to project pages (now using {% url %} template tags) - Improve layout of project pages - Add remove link to uploaded files - Hopefully fix bug with plupload (issue lizard_progress #16) (add an   extra refresh() call after it becomes visible) - Create locations if they don't exist yet and organizations wants that - Create scheduled measurements if they don't exist yet and organization wants   that - Move CSV download to downloads instead of dashboard - Move project admin into the sidebar - Sort out view subclassing - Add contractor to progress graph - Update lizard versions for testing

--- a/lizard_progress/static/lizard_progress/lizard_progress.css
+++ b/lizard_progress/static/lizard_progress/lizard_progress.css
@@ -81,3 +81,8 @@ div#actions a {
 table#files_processed {
     max-width: 98%;
 }
+
+p.small {
+    font-size: 80%;
+    font-style: italic;
+}
